# pede_ai

./: .gitignore  PLANO-REFATORACAO-EXTRATORES.md  PLAN_TROCAR_ITEM_v3.md  README.md  main.py  mkdocs.yml  pyproject.toml
.agents/skills/extreme-programming/: SKILL.md
.github/workflows/: deploy-docs.yml
config/: cardapio.yml  prompts.yml  roteador.yml
docs/: index.md  relatorio-estado-global.md
docs/api/: config.md  extratores.md  graph.md  handlers.md  infra.md  observabilidade.md  roteador.md  scripts.md
docs/superpowers/plans/: 2026-04-04-expansao-observabilidade-debug.md
scripts/: build_embedding_cache.py
src/: __init__.py  cardapio.py  config.py
src/config/: __init__.py  cardapio.py  prompts.py  roteador_config.py
src/extratores/: __init__.py  carrinho_extrator.py  complementos.py  config.py  contexto.py  extrator.py  fuzzy_extrator.py  itens_ids.py  modelos.py  negacao.py  nlp_engine.py  normalizador.py  observacoes.py  patterns.py  qtd_regex.py  quantidade.py  remocoes.py  segmentacao.py  slot_fill.py  spacy_extrator.py  troca_extrator.py
src/graph/: __init__.py  builder.py  contexto.py  nodes.py  state.py
src/graph/handlers/: __init__.py  cancelar_handler.py  carrinho.py  carrinho_handler.py  clarificacao.py  confirmar_handler.py  desconhecido.py  pedido_handler.py  pedir.py  remocao_handler.py  remover.py  saudacao_handler.py  troca_handler.py  trocar.py  utils.py
src/infra/: __init__.py  embedding_providers.py  llm_providers.py
src/observabilidade/: __init__.py  base_logger.py  clarificacao_logger.py  classificador_logger.py  consultas.py  contexto.py  debug_cli.py  decisor_logger.py  dispatcher_logger.py  exception_logger.py  extracao_logger.py  extrator_detail_logger.py  fluxo_logger.py  funil_logger.py  handler_logger.py  logger.py  loggers.py  negocio_logger.py  pedido_logger.py  registry.py
src/roteador/: __init__.py  classificador_intencoes.py  embedding_service.py  modelos.py  protocolos.py  rag_utils.py  service.py  voting.py
tests/: detalhe_erros.py  resumo_validacao.py
tests/src/: test_cardapio.py  test_config.py
tests/src/config/: test_prompts.py  (+1 more)
(+59 files in other folders)
